@@ -1,7 +1,7 @@
 3.0.0 (TBD)
 ------------------
 - add mosaic endpoints  (#17 author @geospatial-jeff)
-- update to rio-tiler-crs 3.0b.1 (rio-tiler 2.0b2)
+- update to rio-tiler-crs~=3.0b.1 (rio-tiler>=2.0b2)
 - STAC is now added by default because there is no need for external module.
 - Pin fastapi version to 0.60.1
 - Remove titiler.core in favor of starlette settings (#55, author @geospatial-jeff)
@@ -9,6 +9,7 @@
 - Remove intermediary routers (#57, author @geospatial-jeff)
 - Remove /titiler/api submodule (e.g titiler.api.utils -> titiler.utils)
 - Add Cache-Control middleware. Endpoints do not define any cache-control headers. (part of #43, co-author with @geospatial-jeff)
+- Add 'X-Assets' in response headers for mosaic tiles (#51)
 
 2.1.2 (2020-06-24)
 ------------------
